Changed logo, deleted hr tag and centered logo i footer

--- a/dining.html
+++ b/dining.html
@@ -14,7 +14,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="img/company-logo.png" width="100" alt="Asia Gargen Hotel logo">
+                <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
             </div>
             <!-- Hamburger Navbar (mobile only) -->
             <div class="hamburger">☰</div>
@@ -203,7 +203,7 @@
     <footer>
         <div class="box-footer-1">
             <div class="image-footer">
-                <img class="logo-footer" src="./img/company-logo.png" alt="A picture of the logo">
+                <img class="logo-footer" src="./img/asia-garden-5.png" alt="A picture of the logo">
             </div>
             <div class="text-footer-1">
                 <p class="title-footer">Asia Garden Hotel</p>
@@ -212,7 +212,7 @@
                 <p>mobkk-reservations@mohg.com</p>
             </div>
         </div>
-        <hr>
+      
 
         <div class="footer-bottom">
 
@@ -234,12 +234,11 @@
                 <!-- <div class="small-box-footer-1"></div> -->
             </div>
 
-            <hr>
             <div class="box-footer-3">
                 <div class="links-footer">
                     <a href="">Home</a>
                     <a href="">Room</a>
-                    <a href="">Restaurant</a>
+                    <a href="">Dining</a>
                     <a href="">Reference</a>
                     <a href="">About us</a>
                     <a href="">Contact us</a>
