--- a/index.html
+++ b/index.html
@@ -241,7 +241,6 @@
                 <p>mobkk-reservations@mohg.com</p>
             </div>
         </div>
-        <hr>
 
         <div class="footer-bottom">
 
@@ -263,12 +262,12 @@
                 <!-- <div class="small-box-footer-1"></div> -->
             </div>
 
-            <hr>
+           
             <div class="box-footer-3">
                 <div class="links-footer">
                     <a href="">Home</a>
                     <a href="">Room</a>
-                    <a href="">Restaurant</a>
+                    <a href="">Dining</a>
                     <a href="">Reference</a>
                     <a href="">About us</a>
                     <a href="">Contact us</a>
