add länkar till footer

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
            
             <div class="box-footer-3">
                 <div class="links-footer">
-                    <a href="">Home</a>
-                    <a href="">Room</a>
-                    <a href="">Dining</a>
-                    <a href="">Reference</a>
+                    <a href="index.html">Home</a>
+                    <a href="Rooms.html">Room</a>
+                    <a href="dining.html">Dining</a>
+                    <a href="reference.html">Reference</a>
                     <a href="">About us</a>
                     <a href="">Contact us</a>
                 </div>
