--- a/Rooms.html
+++ b/Rooms.html
@@ -95,182 +95,81 @@
     </p>
 </section>
 
+
 <section class="Rooms">
+    <article class="room-list">
+<img src="img/room-7.png" alt="">
 
-  <article class="room-list">
-  <div class="slideshow">
-
-    <input type="radio" name="slide1" id="slide1-1" checked>
-    <input type="radio" name="slide1" id="slide1-2">
-    <input type="radio" name="slide1" id="slide1-3">
-
-    <div class="slides">
-      <div class="slide s1"><img src="img/room-6.png" alt="Room view 1"></div> <!-- Your image here -->
-      <div class="slide s2"><img src="img/room-9.png" alt="Room view 2"></div> <!-- Your image here -->
-      <div class="slide s3"><img src="img/room-7.png" alt="Room view 3"></div> <!-- Your image here -->
-    </div>
-
-    <div class="arrows">
-      <label for="slide1-3" class="prev">❮</label>
-      <label for="slide1-2" class="next">❯</label>
-    </div>
-
-    <div class="dots">
-      <label for="slide1-1" class="dot"></label>
-      <label for="slide1-2" class="dot"></label>
-      <label for="slide1-3" class="dot"></label>
-    </div>
-  </div>
-
-  <h2>Standard Queen Room <br> Stockholm</h2>
-  <ul>
-    <li>1500kr - 2900kr</li>
-    <li>1 king bed</li>
-    <li>Breakfast included</li>
-    <li>Pets allowed</li>
-  </ul>
-  <button>Book</button>
-</article>
-
-  <article class="room-list">
-    <div class="slideshow">
-      <input type="radio" name="slide2" id="slide2-1" checked>
-      <input type="radio" name="slide2" id="slide2-2">
-      <input type="radio" name="slide2" id="slide2-3">
-
-      <div class="slides">
-        <div class="slide" id="s2-1"><img src="room2a.jpg" alt="Standard Room - Image 1"></div>
-        <div class="slide" id="s2-2"><img src="room2b.jpg" alt="Standard Room - Image 2"></div>
-        <div class="slide" id="s2-3"><img src="room2c.jpg" alt="Standard Room - Image 3"></div>
-      </div>
-
-      <div class="slide-nav">
-        <label for="slide2-1">1</label>
-        <label for="slide2-2">2</label>
-        <label for="slide2-3">3</label>
-      </div>
-    </div>
-
-    <h2>Standard Room <br> Stockholm</h2>
+    <h2>Standard Queen Room 
+        <br> <p>Stockholm</p></h2>
     <ul>
-      <li>3500kr - 5000kr</li>
-      <li>1 double bed</li>
-      <li>Breakfast included</li>
-      <li>Pets allowed</li>
+        <li>1500kr - 2900kr</li>
+        <li> 1 king bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
     </ul>
     <button>Book</button>
-  </article>
+    </article>
 
-  <article class="room-list">
-    <div class="slideshow">
-      <input type="radio" name="slide3" id="slide3-1" checked>
-      <input type="radio" name="slide3" id="slide3-2">
-      <input type="radio" name="slide3" id="slide3-3">
-
-      <div class="slides">
-        <div class="slide" id="s3-1"><img src="room3a.jpg" alt="Superior Room - Image 1"></div>
-        <div class="slide" id="s3-2"><img src="room3b.jpg" alt="Superior Room - Image 2"></div>
-        <div class="slide" id="s3-3"><img src="room3c.jpg" alt="Superior Room - Image 3"></div>
-      </div>
-
-      <div class="slide-nav">
-        <label for="slide3-1">1</label>
-        <label for="slide3-2">2</label>
-        <label for="slide3-3">3</label>
-      </div>
-    </div>
-
-    <h2>Superior Room <br> Stockholm</h2>
+    <article class="room-list">
+      <img src="img/room-2.png" alt="">
+    <h2>Standard Room  
+    <br> Stockholm</h2>
     <ul>
-      <li>2100kr - 3900kr</li>
-      <li>1 king bed</li>
-      <li>Breakfast included</li>
-      <li>Pets allowed</li>
+        <li> 3500kr - 5000kr</li>
+        <li> 1 double bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
     </ul>
     <button>Book</button>
-  </article>
-
-  <article class="room-list">
-    <div class="slideshow">
-      <input type="radio" name="slide4" id="slide4-1" checked>
-      <input type="radio" name="slide4" id="slide4-2">
-      <input type="radio" name="slide4" id="slide4-3">
-
-      <div class="slides">
-        <div class="slide" id="s4-1"><img src="room4a.jpg" alt="Royal Suite - Image 1"></div>
-        <div class="slide" id="s4-2"><img src="room4b.jpg" alt="Royal Suite - Image 2"></div>
-        <div class="slide" id="s4-3"><img src="room4c.jpg" alt="Royal Suite - Image 3"></div>
-      </div>
-
-      <div class="slide-nav">
-        <label for="slide4-1">1</label>
-        <label for="slide4-2">2</label>
-        <label for="slide4-3">3</label>
-      </div>
-    </div>
-
-    <h2>Royal Suite <br> Stockholm</h2>
+    </article>
+    
+    <article class="room-list">
+      <img src="img/supiror.png" alt="">
+    <h2>Superior Room  
+    <br> Stockholm</h2>
     <ul>
-      <li>6500kr - 7800kr</li>
-      <li>1 king bed</li>
-      <li>Breakfast included</li>
-      <li>Pets allowed</li>
+        <li> 2100kr - 3900kr</li>
+        <li> 1 king bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
     </ul>
     <button>Book</button>
-  </article>
+    </article>
 
-  <article class="room-list">
-    <div class="slideshow">
-      <input type="radio" name="slide5" id="slide5-1" checked>
-      <input type="radio" name="slide5" id="slide5-2">
-      <input type="radio" name="slide5" id="slide5-3">
-
-      <div class="slides">
-        <div class="slide" id="s5-1"><img src="room5a.jpg" alt="Standard 2 Single Bed - Image 1"></div>
-        <div class="slide" id="s5-2"><img src="room5b.jpg" alt="Standard 2 Single Bed - Image 2"></div>
-        <div class="slide" id="s5-3"><img src="room5c.jpg" alt="Standard 2 Single Bed - Image 3"></div>
-      </div>
-
-      <div class="slide-nav">
-        <label for="slide5-1">1</label>
-        <label for="slide5-2">2</label>
-        <label for="slide5-3">3</label>
-      </div>
-    </div>
-
-    <h2>Standard 2 Single Bed <br> Stockholm</h2>
+    <article class="room-list">
+      <img src="img/royal.png" alt="">
+    <h2>Royal Suite  
+    <br> Stockholm</h2>
     <ul>
-      <li>1900kr - 2500kr</li>
-      <li>2 single beds</li>
-      <li>Breakfast included</li>
-      <li>Pets allowed</li>
+        <li> 6500kr - 7800kr</li>
+        <li> 1 king bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
     </ul>
     <button>Book</button>
-  </article>
+    </article>
 
-  <article class="room-list">
-    <div class="slideshow">
-      <input type="radio" name="slide6" id="slide6-1" checked>
-      <input type="radio" name="slide6" id="slide6-2">
-      <input type="radio" name="slide6" id="slide6-3">
-
-      <div class="slides">
-        <div class="slide" id="s6-1"><img src="room6a.jpg" alt="Executive Suite - Image 1"></div>
-        <div class="slide" id="s6-2"><img src="room6b.jpg" alt="Executive Suite - Image 2"></div>
-        <div class="slide" id="s6-3"><img src="room6c.jpg" alt="Executive Suite - Image 3"></div>
-      </div>
-
-      <div class="slide-nav">
-        <label for="slide6-1">1</label>
-        <label for="slide6-2">2</label>
-        <label for="slide6-3">3</label>
-      </div>
-    </div>
-
-    <h2>Executive Suite <br> Stockholm</h2>
+    <article class="room-list">
+      <img src="img/2single.png" alt="">
+    <h2>Standard 2 Single bed
+    <br> Stockholm</h2>
     <ul>
-      <li>4500kr - 6900kr</li>
-      <li>1 double bed</li>
+        <li> 1900kr - 2500kr</li>
+        <li> 2 single beds</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
+    </ul>
+    <button>Book</button>
+    </article>
+
+    <article class="room-list">
+      <img src="img/Executive.png" alt="">
+    <h2>Executive Suite
+    <br> Stockholm</h2>
+    <ul>
+        <li> 4500kr - 6900kr</li>
+        <li> 1 double bed</li>
         <li> Breakfast included</li>
         <li> No pets allowed</li>
     </ul>
