added "more details" button

--- a/Rooms.html
+++ b/Rooms.html
@@ -101,7 +101,7 @@
 <img src="img/room-7.png" alt="">
 
     <h2>Standard Queen Room 
-        <br> <p>Stockholm</p></h2>
+        <br> Stockholm</h2>
     <ul>
         <li>1500kr - 2900kr</li>
         <li> 1 king bed</li>
@@ -109,6 +109,7 @@
         <li> pets allowed</li>
     </ul>
     <button>Book</button>
+    <button>More details</button>
     </article>
 
     <article class="room-list">
@@ -121,7 +122,8 @@
         <li> Breakfast included</li>
         <li> pets allowed</li>
     </ul>
-    <button>Book</button>
+    <button>Book</button> 
+    <button>More details</button>
     </article>
     
     <article class="room-list">
@@ -135,6 +137,7 @@
         <li> pets allowed</li>
     </ul>
     <button>Book</button>
+    <button>More details</button>
     </article>
 
     <article class="room-list">
@@ -148,6 +151,7 @@
         <li> pets allowed</li>
     </ul>
     <button>Book</button>
+    <button>More details</button>
     </article>
 
     <article class="room-list">
@@ -161,6 +165,7 @@
         <li> pets allowed</li>
     </ul>
     <button>Book</button>
+    <button>More details</button>
     </article>
 
     <article class="room-list">
@@ -174,6 +179,7 @@
         <li> No pets allowed</li>
     </ul>
     <button>Book</button>
+    <button>More details</button>
     </article>
 
 </section>
