added icons for beds

--- a/Rooms.html
+++ b/Rooms.html
@@ -103,8 +103,9 @@
     <h2>Standard Queen Room 
         <br> Stockholm</h2>
     <ul>
-        <li>1500kr - 2900kr</li>
-        <li> 1 king bed</li>
+        <li> Price: 1500kr - 2900kr</li>
+        <li> <img src="img/bed.png" alt="bed icon" class="icon-bed">
+        <span>1 king bed</span></li>
         <li> Breakfast included</li>
         <li> pets allowed</li>
     </ul>
@@ -117,8 +118,9 @@
     <h2>Standard Room  
     <br> Stockholm</h2>
     <ul>
-        <li> 3500kr - 5000kr</li>
-        <li> 1 double bed</li>
+        <li> Price: 3500kr - 5000kr</li>
+        <li> <img src="img/bed.png" alt="bed icon" class="icon-bed">
+        <span>1 double bed</span></li>
         <li> Breakfast included</li>
         <li> pets allowed</li>
     </ul>
@@ -131,8 +133,9 @@
     <h2>Superior Room  
     <br> Stockholm</h2>
     <ul>
-        <li> 2100kr - 3900kr</li>
-        <li> 1 king bed</li>
+        <li> Price: 2100kr - 3900kr</li>
+        <li> <img src="img/bed.png" alt="bed icon" class="icon-bed">
+        <span>1 king bed</span></li>
         <li> Breakfast included</li>
         <li> pets allowed</li>
     </ul>
@@ -145,8 +148,9 @@
     <h2>Royal Suite  
     <br> Stockholm</h2>
     <ul>
-        <li> 6500kr - 7800kr</li>
-        <li> 1 king bed</li>
+        <li> Price: 6500kr - 7800kr</li>
+        <li> <img src="img/bed.png" alt="bed icon" class="icon-bed">
+        <span>1 king bed</span></li>
         <li> Breakfast included</li>
         <li> pets allowed</li>
     </ul>
@@ -159,8 +163,9 @@
     <h2>Standard 2 Single bed
     <br> Stockholm</h2>
     <ul>
-        <li> 1900kr - 2500kr</li>
-        <li> 2 single beds</li>
+        <li> Price: 1900kr - 2500kr</li>
+        <li> <img src="img/bed.png" alt="bed icon" class="icon-bed">
+        <span>2 single beds</span></li>
         <li> Breakfast included</li>
         <li> pets allowed</li>
     </ul>
@@ -173,8 +178,9 @@
     <h2>Executive Suite
     <br> Stockholm</h2>
     <ul>
-        <li> 4500kr - 6900kr</li>
-        <li> 1 double bed</li>
+        <li> Price: 4500kr - 6900kr</li>
+        <li> <img src="img/bed.png" alt="bed icon" class="icon-bed">
+        <span>1 double bed</span></li>
         <li> Breakfast included</li>
         <li> No pets allowed</li>
     </ul>
