add new picture, re-write dining page

--- a/dining.html
+++ b/dining.html
@@ -103,10 +103,8 @@
         </section>
         <!-- Main SECTION -->
         <section class="dining-section">
-            <!-- <h2 class="dining-section-title">Discover Our Dining Options</h2> -->
-
-            <div class="dining-card">
-                <img src="img/restaurant-4.png" alt="Afternoon Tea">
+            <div class="dining-right-card">
+                <img src="img/restaurant-6.png" alt="Afternoon Tea">
 
                 <div class="dining-info">
                     <h2>Afternoon Tea</h2>
@@ -124,11 +122,10 @@
                 </div>
             </div>
         </section>
-        <hr>
 
+        <!-- SECOND ITEM (reversed layout on desktop) -->
         <section class="dining-section">
-            <!-- SECOND ITEM (reversed layout on desktop) -->
-            <div class="dining-item reverse">
+            <div class="dining-left-card">
                 <img src="./img/Chinesefood-1.jpg" alt="Chinese Dinner" class="dining-image">
                 <div class="dining-info">
                     <h2>Chinese Dinner</h2>
@@ -147,51 +144,51 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <hr>
-        <!-- <h2 class="dining-section-title">Discover Our Dining Options</h2> -->
-        <section class="dining-section">
-            <div class="dining-card">
-                <img src="img/japanese-food-1.jpg" alt="Japanese food">
+            <!-- <h2 class="dining-section-title">Discover Our Dining Options</h2> -->
+            <section class="dining-section">
+                <div class="dining-right-card">
+                    <img src="img/japanese-food-1.jpg" alt="Japanese food">
 
-                <div class="dining-info">
-                    <h2>Japanese Dining at Kinu</h2>
-                    <p><strong>Date:</strong> Every evening in October and November</p>
-                    <p><strong>Time:</strong>18:00 - 23:00</p>
-                    <p>
-                        Kinu by Takagi brings an elevated Kaiseki dining experience to the Mandarin Oriental Bangkok.
-                        The composed, delicate, and expressive dishes, offer a refined Kyoto-style cuisine, known as
-                        ‘Kyo-ryori’, reflecting the seasons and cultures of both Japan and Thailand. Enjoy this dinner
-                        for two. 
-                    </p>
+                    <div class="dining-info">
+                        <h2>Japanese Dining at Kinu</h2>
+                        <p><strong>Date:</strong> Every evening in October and November</p>
+                        <p><strong>Time:</strong>18:00 - 23:00</p>
+                        <p>
+                            Kinu by Takagi brings an elevated Kaiseki dining experience to the Mandarin Oriental
+                            Bangkok.
+                            The composed, delicate, and expressive dishes, offer a refined Kyoto-style cuisine, known as
+                            ‘Kyo-ryori’, reflecting the seasons and cultures of both Japan and Thailand. Enjoy this
+                            dinner
+                            for two. 
+                        </p>
 
-                    <div class="dining-buttons">
-                        <button type="button" class="btn grey-btn">menu</button>
-                        <button type="button" class="btn blue-btn">Book</button>
+                        <div class="dining-buttons">
+                            <button type="button" class="btn grey-btn">menu</button>
+                            <button type="button" class="btn blue-btn">Book</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <hr>
-        <section class="dining-section">
-            <!-- SECOND ITEM (reversed layout on desktop) -->
-            <div class="dining-item reverse">
-                <img src="./img/dining.png" alt="Thai Dinner" class="dining-image">
-                <div class="dining-info">
-                    <h2>Authentic Thai By Chef Nara</h2>
-                    <p><strong>Date:</strong> Every evening in October and November</p>
-                    <p><strong>Time:</strong> 18:00 - 23:00</p>
-                    <p>
-                        Rooted in the heritage of Chaoshan and Cantonese cuisine, this refined dining experience offers
-                        a thoughtful expression of tradition in a richly storied setting.
-                    </p>
-                    <div class="dining-buttons">
-                        <button type="button" class="btn grey-btn">menu</button>
-                        <button type="button" class="btn blue-btn">Book</button>
+            </section>
+            <section class="dining-section">
+                <!-- SECOND ITEM (reversed layout on desktop) -->
+                <div class="dining-left-card">
+                    <img src="./img/thai-food.jpg" alt="Thai Dinner" class="dining-image">
+                    <div class="dining-info">
+                        <h2>Authentic Thai By Chef Nara</h2>
+                        <p><strong>Date:</strong> Every evening in October and November</p>
+                        <p><strong>Time:</strong> 18:00 - 23:00</p>
+                        <p>
+                            Rooted in the heritage of Chaoshan and Cantonese cuisine, this refined dining experience
+                            offers
+                            a thoughtful expression of tradition in a richly storied setting.
+                        </p>
+                        <div class="dining-buttons">
+                            <button type="button" class="btn grey-btn">menu</button>
+                            <button type="button" class="btn blue-btn">Book</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
 
     </main>
@@ -212,7 +209,7 @@
                 <p>mobkk-reservations@mohg.com</p>
             </div>
         </div>
-      
+
 
         <div class="footer-bottom">
 
