--- a/Rooms.html
+++ b/Rooms.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Hotel Rooms and Suites</title>
 <link rel="stylesheet" href="style.css" />
+<link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@700&display=swap" rel="stylesheet" />
 </head>
 
 
@@ -82,12 +83,9 @@
   <img src="img/Room-hero.png" alt="a big pic of the room">
 </div>
 
-<header>
-    <h1>Rooms and Suites</h1>
-</header>
-
-<section class="description">
-    <p>
+<section class="rooms-section">
+    <h1 class="roomh1">Rooms and Suites</h1>
+    <p class="rooms-description">
     Our 130 hotel rooms and suites are characterized by quality, design and comfort.
     Enjoy the view of Nybroviken from our bright and spacious Junior Suites or Deluxe Sea View Rooms.
     Our rooms face either the beautiful esplanade or the hotel’s peaceful courtyard.
