changed black logo header/footer. Deleted main.css link

--- a/dining.html
+++ b/dining.html
@@ -48,11 +48,11 @@
             <form action="/action_page.php" class="booking-form">
 
                 <label for="checkin" class="sr-only">Check in</label>
-                <input type="text" id="checkin" placeholder="checkin" onfocus="(this.type='date')"
+                <input type="text" id="checkin" placeholder="Check in" onfocus="(this.type='date')"
                     onblur="if(!this.value)this.type='text'">
 
                 <label for="checkout" class="sr-only">Check out</label>
-                <input type="text" id="checkout" placeholder="checkout" onfocus="(this.type='date')"
+                <input type="text" id="checkout" placeholder="Check out" onfocus="(this.type='date')"
                     onblur="if(!this.value)this.type='text'">
 
                 <label for="adult" class="sr-only">Adult</label>
