--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <!-- Header and Navbar -->
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="img/company-logo.png" width="100" alt="Asia Gargen Hotel logo">
+                <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
             </div>
             <!-- Hamburger Navbar (mobile only) -->
             <div class="hamburger">☰</div>
 
             <!-- Navbar links (Desktop only) -->
             <div class="topnav-center">
-                <a class="active" href="index.html">Home</a>
+                <a class="active" href="#home">Home</a>
                 <a href="Rooms.html">Room</a>
                 <a href="dining.html">Dining</a>
-                <a href="reference.html">Reference</a>
+                <a href="#reference">Reference</a>
                 <a href="#about us">About Us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="#contact us">Contact Us</a>
             </div>
             <!-- Navbar search & language  -->
             <div class="topnav-right">
                 <div>
-                    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+                    <a href="#"><i class="fa fa-fw fa-user"></i></a>
                 </div>
                 <div class="search-box">
                     <input width="20" type="text" placeholder="search">
@@ -41,7 +44,7 @@
             </div>
         </nav>
 
-        <!-- Responsiv Navbar Booking Form  -->
+        <!-- Navbar Booking Form  -->
         <section class="booking-bar">
             <form action="/action_page.php" class="booking-form">
 
@@ -77,7 +80,7 @@
         </section>
     </header>
 
-   <div class="contact-section">
+    <div class="contact-section">
         <div>
             <h1 class="h1-contact">Contact Information</h1>
         </div>
@@ -87,20 +90,21 @@
         <div class="text-contact">
             <p><img src="./img/mail.png" alt="A picture of a letter"> asiagardenhotel@asiagardenhotel.com</p>
             <p><img src="./img/telephone.png" alt="A picture of a telephone"> +46 76 00 00 000</p>
-            <p><img src="./img/location.png" alt="A picture of a location tag"> Stockholmsgatan 1, 111 27, Stockholm, Sweden</p>
+            <p><img src="./img/location.png" alt="A picture of a location tag"> Stockholmsgatan 1, 111 27, Stockholm,
+                Sweden</p>
         </div>
-   </div> 
-   <hr>
-   <div class="office-building">
+    </div>
+    <hr>
+    <div class="office-building">
         <div>
             <h2 class="h1-office-building">Our Office Building</h2>
         </div>
         <div>
             <img class="image-office-building" src="./img/office-building.png" alt="A picture of a building">
         </div>
-   </div>
-   <hr>
-   <div class="form">
+    </div>
+    <hr>
+    <div class="form">
         <h2 class="h2-contact">CONTACT US</h2>
         <form>
             <label for="firstname">First name</label><br>
@@ -119,14 +123,14 @@
             <textarea name="message" id="message"></textarea><br>
             <input class="submit-contact" type="submit" value="Send">
         </form>
-   </div>
+    </div>
 
-   <!-- Footer Section -->
+    <!-- Footer Section -->
 
     <footer>
         <div class="box-footer-1">
             <div class="image-footer">
-                <img class="logo-footer" src="./img/company-logo.png" alt="A picture of the logo">
+                <img class="logo-footer" src="./img/asia-garden-5.png" alt="A picture of the logo">
             </div>
             <div class="text-footer-1">
                 <p class="title-footer">Asia Garden Hotel</p>
@@ -135,7 +139,7 @@
                 <p>mobkk-reservations@mohg.com</p>
             </div>
         </div>
-        <hr>
+
 
         <div class="footer-bottom">
 
@@ -143,7 +147,7 @@
                 <div class="text-footer-2">
                     <p class="newsletter-footer">
                         Newsletter
-    
+
                     </p>
                     <p class="newsletter-text-footer">
                         Subscribe to our newsletter to see what's happening at
@@ -157,12 +161,11 @@
                 <!-- <div class="small-box-footer-1"></div> -->
             </div>
 
-            <hr>
             <div class="box-footer-3">
                 <div class="links-footer">
                     <a href="">Home</a>
                     <a href="">Room</a>
-                    <a href="">Restaurant</a>
+                    <a href="">Dining</a>
                     <a href="">Reference</a>
                     <a href="">About us</a>
                     <a href="">Contact us</a>
@@ -180,6 +183,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer>∑
 </body>
+
 </html>
