--- a/reference.html
+++ b/reference.html
@@ -6,30 +6,31 @@
     <title>Reference</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Header and Navbar -->
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="img/company-logo.png" width="100" alt="Asia Gargen Hotel logo">
+                <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
             </div>
             <!-- Hamburger Navbar (mobile only) -->
             <div class="hamburger">☰</div>
 
             <!-- Navbar links (Desktop only) -->
             <div class="topnav-center">
-                <a class="active" href="index.html">Home</a>
+                <a class="active" href="#home">Home</a>
                 <a href="Rooms.html">Room</a>
                 <a href="dining.html">Dining</a>
-                <a href="reference.html">Reference</a>
+                <a href="#reference">Reference</a>
                 <a href="#about us">About Us</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="#contact us">Contact Us</a>
             </div>
             <!-- Navbar search & language  -->
             <div class="topnav-right">
                 <div>
-                    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+                    <a href="#"><i class="fa fa-fw fa-user"></i></a>
                 </div>
                 <div class="search-box">
                     <input width="20" type="text" placeholder="search">
@@ -41,7 +42,7 @@
             </div>
         </nav>
 
-        <!-- Responsiv Navbar Booking Form  -->
+       <!-- Navbar Booking Form  -->
         <section class="booking-bar">
             <form action="/action_page.php" class="booking-form">
 
@@ -124,10 +125,10 @@
 
     <!-- Footer Section -->
 
-    <footer>
+     <footer>
         <div class="box-footer-1">
             <div class="image-footer">
-                <img class="logo-footer" src="./img/company-logo.png" alt="A picture of the logo">
+                <img class="logo-footer" src="./img/asia-garden-5.png" alt="A picture of the logo">
             </div>
             <div class="text-footer-1">
                 <p class="title-footer">Asia Garden Hotel</p>
@@ -136,7 +137,7 @@
                 <p>mobkk-reservations@mohg.com</p>
             </div>
         </div>
-        <hr>
+
 
         <div class="footer-bottom">
 
@@ -144,7 +145,7 @@
                 <div class="text-footer-2">
                     <p class="newsletter-footer">
                         Newsletter
-    
+
                     </p>
                     <p class="newsletter-text-footer">
                         Subscribe to our newsletter to see what's happening at
@@ -158,12 +159,11 @@
                 <!-- <div class="small-box-footer-1"></div> -->
             </div>
 
-            <hr>
             <div class="box-footer-3">
                 <div class="links-footer">
                     <a href="">Home</a>
                     <a href="">Room</a>
-                    <a href="">Restaurant</a>
+                    <a href="">Dining</a>
                     <a href="">Reference</a>
                     <a href="">About us</a>
                     <a href="">Contact us</a>
