--- a/Rooms.html
+++ b/Rooms.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Hotel Rooms and Suites</title>
 <link rel="stylesheet" href="style.css" />
-<link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@700&display=swap" rel="stylesheet" />
 </head>
 
 
@@ -14,14 +13,14 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="img/company-logo.png" width="100" alt="Asia Gargen Hotel logo">
+                <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
             </div>
             <!-- Hamburger Navbar (mobile only) -->
             <div class="hamburger">☰</div>
 
             <!-- Navbar links (Desktop only) -->
             <div class="topnav-center">
-                <a class="active" href="index.html">Home</a>
+                <a class="active" href="#home">Home</a>
                 <a href="Rooms.html">Room</a>
                 <a href="dining.html">Dining</a>
                 <a href="#reference">Reference</a>
@@ -31,7 +30,7 @@
             <!-- Navbar search & language  -->
             <div class="topnav-right">
                 <div>
-                    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+                    <a href="#"><i class="fa fa-fw fa-user"></i></a>
                 </div>
                 <div class="search-box">
                     <input width="20" type="text" placeholder="search">
@@ -43,7 +42,7 @@
             </div>
         </nav>
 
-        <!-- Responsiv Navbar Booking Form  -->
+        <!-- Navbar Booking Form  -->
         <section class="booking-bar">
             <form action="/action_page.php" class="booking-form">
 
@@ -228,56 +227,62 @@
   </article>
 </section>
 
-<footer>
-    <div class="box-footer-1">
-        <div class="image-footer">
-            <img class="logo-footer" src="./img/company-logo.png" alt="A picture of the logo">
+ <footer>
+        <div class="box-footer-1">
+            <div class="image-footer">
+                <img class="logo-footer" src="./img/asia-garden-5.png" alt="A picture of the logo">
+            </div>
+            <div class="text-footer-1">
+                <p class="title-footer">Asia Garden Hotel</p>
+                <p>48 Oriental Avenue, Bangkok, 10500, Thailand</p>
+                <p>+66 (0) 2 659 9000 </p>
+                <p>mobkk-reservations@mohg.com</p>
+            </div>
         </div>
-        <div class="text-footer-1">
-            <p class="title-footer">Asia Garden Hotel</p>
-            <p>48 Oriental Avenue, Bangkok, 10500, Thailand</p>
-            <p>+66 (0) 2 659 9000 </p>
-            <p>mobkk-reservations@mohg.com</p>
-        </div>
-    </div>
-    <hr>
-    <div class="box-footer-2">
-        <div class="text-footer-2">
-            <p class="newsletter-footer">
-                Newsletter
-            </p>
-            <p class="newsletter-text-footer">
-                Subscribe to our newsletter to see what's happening at 
-                Asia Garden Hotel and to take advantage of our offers.
-            </p>
-        </div>
-        <form class="form-footer">
-            <input type="text" placeholder="email adress" id="input-footer">
-            <input type="submit" value="Sign up" id="button-footer">
-        </form>
 
-    </div>
-    <hr>
-    <div class="box-footer-3">
-        <div class="links-footer">
-            <a href="">Home</a>
-            <a href="">Room</a>
-            <a href="">Restaurant</a>
-            <a href="">Reference</a>
-            <a href="">About us</a>
-            <a href="">Contact us</a>
+
+        <div class="footer-bottom">
+
+            <div class="box-footer-2">
+                <div class="text-footer-2">
+                    <p class="newsletter-footer">
+                        Newsletter
+
+                    </p>
+                    <p class="newsletter-text-footer">
+                        Subscribe to our newsletter to see what's happening at
+                        Asia Garden Hotel and to take advantage of our offers.
+                    </p>
+                </div>
+                <form class="form-footer">
+                    <input type="text" placeholder="email adress" id="input-footer">
+                    <input type="submit" value="Sign up" id="button-footer">
+                </form>
+                <!-- <div class="small-box-footer-1"></div> -->
+            </div>
+
+            <div class="box-footer-3">
+                <div class="links-footer">
+                    <a href="">Home</a>
+                    <a href="">Room</a>
+                    <a href="">Dining</a>
+                    <a href="">Reference</a>
+                    <a href="">About us</a>
+                    <a href="">Contact us</a>
+                </div>
+                <div class="social-media-footer">
+                    <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"><img
+                            src="./img/youtube.png" alt=""></a>
+                    <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt=""></a>
+                    <a href="https://x.com" target="_blank"><img src="./img/twitter.png" alt=""></a>
+                    <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt=""></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><img src="./img/linkedin.png" alt=""></a>
+                </div>
+                <div class="copyright-notice">
+                    <p>Asia Garden Hotel @ 2025. All rights reserved.</p>
+                </div>
+            </div>
         </div>
-            <div class="social-media-footer">
-                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"><img src="./img/youtube.png" alt=""></a>
-                <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt=""></a>
-                <a href="https://x.com" target="_blank"><img src="./img/twitter.png" alt=""></a>
-                <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt=""></a>
-                <a href="https://www.linkedin.com/" target="_blank"><img src="./img/linkedin.png" alt=""></a>
-            </div>
-            <div class="copyright-notice">
-                <p>Asia Garden Hotels @ 2025. All rights reserved.</p>
-            </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
