--- a/reference.html
+++ b/reference.html
@@ -20,12 +20,12 @@
 
             <!-- Navbar links (Desktop only) -->
             <div class="topnav-center">
-                <a class="active" href="#home">Home</a>
+                <a href="index.html">Home</a>
                 <a href="Rooms.html">Room</a>
                 <a href="dining.html">Dining</a>
-                <a href="#reference">Reference</a>
-                <a href="#about us">About Us</a>
-                <a href="#contact us">Contact Us</a>
+                <a class="active" href="reference.html">Reference</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact Us</a>
             </div>
             <!-- Navbar search & language  -->
             <div class="topnav-right">
