Created a About us page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="Rooms.html">Room</a>
                 <a href="dining.html">Dining</a>
                 <a href="reference.html">Reference</a>
-                <a href="#about us">About Us</a>
+                <a href="About.html">About Us</a>
                 <a href="contact.html">Contact Us</a>
             </div>
             <!-- Navbar search & language  -->
