Fixed all links in the footer

--- a/contact.html
+++ b/contact.html
@@ -163,12 +163,12 @@
 
             <div class="box-footer-3">
                 <div class="links-footer">
-                    <a href="">Home</a>
-                    <a href="">Room</a>
-                    <a href="">Dining</a>
-                    <a href="">Reference</a>
-                    <a href="">About us</a>
-                    <a href="">Contact us</a>
+                    <a href="index.html">Home</a>
+                    <a href="rooms.html">Room</a>
+                    <a href="dining.html">Dining</a>
+                    <a href="reference.html">Reference</a>
+                    <a href="about.html">About us</a>
+                    <a href="contact.html">Contact us</a>
                 </div>
                 <div class="social-media-footer">
                     <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"><img
