--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                     <a href="Rooms.html">Room</a>
                     <a href="dining.html">Dining</a>
                     <a href="reference.html">Reference</a>
-                    <a href="">About us</a>
-                    <a href="">Contact us</a>
+                    <a href="about.html">About us</a>
+                    <a href="contact.html">Contact us</a>
                 </div>
                 <div class="social-media-footer">
                     <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"><img
