--- a/contact.html
+++ b/contact.html
@@ -104,17 +104,17 @@
         </div>
     </div>
     <hr>
-    <div class="form">
+    <div class="form-div">
         <h2 class="h2-contact">CONTACT US</h2>
-        <form>
+        <form class="form-contact">
             <label for="firstname">First name</label><br>
-            <input type="text" id="firstname" name="firstname"><br>
+            <input class="input-contact" type="text" id="firstname" name="firstname"><br>
             <label for="email">Email</label><br>
-            <input type="text" id="email" name="email"><br>
+            <input class="input-contact" type="text" id="email" name="email"><br>
             <label for="lastname">Last name</label><br>
-            <input type="text" id="lastname" name="lastname"><br>
+            <input class="input-contact" type="text" id="lastname" name="lastname"><br>
             <label for="subject">Choose a subject</label><br>
-            <select name="subject" id="subject">
+            <select class="select-contact" name="subject" id="subject">
                 <option value="purchase">Purchase of product/service</option>
                 <option value="question">Questions about the company</option>
                 <option value="comment">Comments on website</option>
