--- a/About.html
+++ b/About.html
@@ -6,6 +6,7 @@
 <title>About Us</title>
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
@@ -77,26 +78,49 @@
 
     <body>
 
-<h1>Our History</h1>
+
 
 <div class="about-bigpic">
     <img src="img/about-hotel.png" alt="a picture of the hotel">
 </div>
-
-<p>Asia Gardens Hotel & Thai Spa was established in 2005, inspired by a passion for Asian aesthetics and Mediterranean warmth. 
+<section class="rooms-section">
+<h1 class="roomh1">Our History</h1>
+<p class="rooms-description">Asia Gardens Hotel & Thai Spa was established in 2005, inspired by a passion for Asian aesthetics and Mediterranean warmth. 
     <br>The founders envisioned a serene sanctuary where guests could experience luxury intertwined with tranquil gardens and 
     authentic Asian hospitality. Over the years, it has grown to become a beloved destination for those seeking a blend of 
     relaxation, culture, and culinary delights.</p>
+</section>
+
+<section class="our-team">
+<h2>Our Team</h2>
+<p>At Asia Gardens Hotel & Thai Spa, our team is the soul of our sanctuary. United by a passion for Asian aesthetics and 
+    Mediterranean hospitality, we bring together skilled professionals from diverse backgrounds—spa therapists, culinary artists, 
+    guest service experts—each committed to delivering excellence with grace. Our shared vision is to create a haven where guests 
+    feel truly cared for, surrounded by beauty, tranquility, and authentic cultural warmth.</p>
 
 
+<section class="Rooms">
+    <article class="room-list">
+        <img src="img/spagirl.png" alt="">
+    </article>
+    <article class="room-list">
+        <img src="img/headchefpic.png" alt="">
+    </article>
+    <article class="room-list">
+        <img src="img/profilepicwoman.jpg.png" alt="">
+    </article>
+    <article class="room-list">
+        <img src="img/headpic.png" alt="">
+    </article>
+    <article class="room-list">
+        <img src="img/profilepicwomanboss.jpg.png" alt="">
+    </article>
+    <article class="room-list">
+        <img src="img/arabpic.png" alt="">
+    </article>
+</section>
 
-
-
-
-
-
-
-
+</section>
 
 
 
