--- a/About.html
+++ b/About.html
@@ -92,13 +92,18 @@
     relaxation, culture, and culinary delights.</p>
 </section>
 
+
+<div class="containercatchphrase">
+    <img src="img/catchframe.png" alt="catchphrase image">
+<div class="catchphrasecenter"><h2 class="catchphrase">Where luxury meets comfort</h2></div>
+</div>
+
 <section class="our-team">
 <h2>Our Team</h2>
 <p>At Asia Gardens Hotel & Thai Spa, our team is the soul of our sanctuary. United by a passion for Asian aesthetics and 
     Mediterranean hospitality, we bring together skilled professionals from diverse backgrounds—spa therapists, culinary artists, 
     guest service experts—each committed to delivering excellence with grace. Our shared vision is to create a haven where guests 
     feel truly cared for, surrounded by beauty, tranquility, and authentic cultural warmth.</p>
-
 
 <section class="Rooms">
     <article class="room-list">
