--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <a href="rooms.html">
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 6</div>
-                        <img src="img/room-suite.png" style="width:100%">
+                        <img src="img/room-suite.png" alt="a room picture" style="width:100%">
                         <div class="text">Room & Suite</div>
                     </div>
                 </a>
