--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
    <!-- Header and Navbar -->
     <header class="header">
+        
         <nav class="navbar">
             <div class="logo">
                 <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
@@ -34,12 +35,13 @@
             <!-- Navbar search & language  -->
             <div class="topnav-right">
                 <div>
-                    <a href="#"><i class="fa fa-fw fa-user"></i></a>
+                    <a href="index.html" aria-label="Login">
+                        <i class="fa fa-fw fa-user" aria-hidden="true"></i></a>                
                 </div>
                 <div class="search-box">
                     <input width="20" type="text" placeholder="search">
                 </div>
-                <select class="lang-select">
+                <select class="lang-select" aria-label="Select Language">
                     <option>EN</option>
                     <option>SV</option>
                 </select>
