--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,13 @@
             <!-- Navbar search & language  -->
             <div class="topnav-right">
                 <div>
-                    <a href="#"><i class="fa fa-fw fa-user"></i></a>
+                    <a href="index.html" aria-label="Login">
+                        <i class="fa fa-fw fa-user" aria-hidden="true"></i></a>                
                 </div>
                 <div class="search-box">
                     <input width="20" type="text" placeholder="search">
                 </div>
-                <select class="lang-select">
+                <select class="lang-select" aria-label="Select Language">
                     <option>EN</option>
                     <option>SV</option>
                 </select>
