run through validator

--- a/Rooms.html
+++ b/Rooms.html
@@ -1,85 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Hotel Rooms and Suites</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hotel Rooms and Suites</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-
 <body>
-    <!-- Header and Navbar -->
-    <header class="header">
-        <nav class="navbar">
-            <div class="logo">
-                <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
-            </div>
-            <!-- Hamburger Navbar (mobile only) -->
-            <div class="hamburger">☰</div>
+  <!-- Header and Navbar -->
+  <header class="header">
+    <nav class="navbar">
+      <div class="logo">
+        <img src="img/asia-garden-5.png" width="100" alt="Asia Garden Hotel logo">
+      </div>
 
-            <!-- Navbar links (Desktop only) -->
-            <div class="topnav-center">
-                <a href="index.html">Home</a>
-                <a class="active" href="Rooms.html">Room</a>
-                <a href="dining.html">Dining</a>
-                <a href="reference.html">Reference</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact Us</a>
-            </div>
-            <!-- Navbar search & language  -->
-             <div class="topnav-right">
-                <div>
-                    <a href="index.html" aria-label="Login">
-                        <i class="fa fa-fw fa-user" aria-hidden="true"></i></a>                
-                </div>
-                <div class="search-box">
-                    <input width="20" type="text" placeholder="search">
-                </div>
-                <select class="lang-select" aria-label="Select Language">
-                    <option>EN</option>
-                    <option>SV</option>
-                </select>
-            </div>
-        </nav>
+      <div class="hamburger">☰</div>
 
-        <!-- Navbar Booking Form  -->
-        <section class="booking-bar">
-            <form action="/action_page.php" class="booking-form">
+      <div class="topnav-center">
+        <a href="index.html">Home</a>
+        <a class="active" href="Rooms.html">Room</a>
+        <a href="dining.html">Dining</a>
+        <a href="reference.html">Reference</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact Us</a>
+      </div>
 
-                <label for="checkin" class="sr-only">Check in</label>
-                <input type="text" id="checkin" placeholder="Check in" onfocus="(this.type='date')"
-                    onblur="if(!this.value)this.type='text'">
+      <div class="topnav-right">
+        <div>
+          <a href="index.html" aria-label="Login">
+            <i class="fa fa-fw fa-user" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="search-box">
+          <input type="text" placeholder="Search">
+        </div>
+        <select class="lang-select" aria-label="Select Language">
+          <option>EN</option>
+          <option>SV</option>
+        </select>
+      </div>
+    </nav>
 
-                <label for="checkout" class="sr-only">Check out</label>
-                <input type="text" id="checkout" placeholder="Check out" onfocus="(this.type='date')"
-                    onblur="if(!this.value)this.type='text'">
+    <!-- Booking Bar -->
+    <section class="booking-bar">
+      <h2 class="sr-only">Booking Form</h2>
+      <form action="/action_page.php" class="booking-form">
+        <label for="checkin" class="sr-only">Check in</label>
+        <input type="text" id="checkin" placeholder="Check in" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
 
-                <label for="adult" class="sr-only">Adult</label>
-                <select id="adult" name="adult">
-                    <option value="0">Adult</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                </select>
+        <label for="checkout" class="sr-only">Check out</label>
+        <input type="text" id="checkout" placeholder="Check out" onfocus="(this.type='date')" onblur="if(!this.value)this.type='text'">
 
-                <label for="children" class="sr-only">Children</label>
-                <select id="children" name="children">
-                    <option value="0">Children</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                </select>
+        <label for="adult" class="sr-only">Adult</label>
+        <select id="adult" name="adult">
+          <option value="0">Adult</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
 
-                <button type="submit" class="btn-book">Book</button>
+        <label for="children" class="sr-only">Children</label>
+        <select id="children" name="children">
+          <option value="0">Children</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+        </select>
 
-            </form>
-        </section>
-    </header>
+        <button type="submit" class="btn-book">Book</button>
+      </form>
+    </section>
+
+    <!-- Rooms Section -->
+    <section class="Rooms">
+      <h2 class="sr-only">Room Listings</h2>
+      <!-- Room cards go here -->
+    </section>
+  </header>
 
 <div class="roombigpic">
   <img src="img/Room-hero.png" alt="a big pic of the room">
@@ -97,6 +99,7 @@
 
 
 <section class="Rooms">
+      <h2 class="sr-only">Room Listings</h2>
     <article class="room-list">
 <img src="img/room-7.png" alt="">
 
